# discord-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  SKILL.md  commands.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ai-agents.md  plugins.md
examples/plugin-hello/: README.md  pyproject.toml
examples/plugin-hello/src/plugin_hello/: __init__.py
legacy/: discord_cli_original.py
packaging/homebrew/: discordcli-agents.rb
packaging/npm/: index.js  install.js  package.json
packaging/scoop/: discordcli-agents.json
src/discord_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  errors.py  models.py  output.py  plugins.py  registry.py
src/discord_cli/commands/: __init__.py  categories.py  channels.py  export.py  guilds.py  invites.py  members.py  messages.py  permissions.py  plugins.py  roles.py  search.py  threads.py  webhooks.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_errors.py  test_output.py  test_plugins.py  test_registry.py
tests/commands/: test_categories.py  test_channels.py  test_guilds.py  test_members.py  test_messages.py  test_permissions.py  test_plugins.py  test_roles.py  test_threads.py  test_webhooks.py
