[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-cli"
dynamic = ["version"]
description = "Command-line tool for managing Discord servers and automating Discord via AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["discord", "cli", "discord-bot", "discord-automation", "ai-agent"]
authors = [
    { name = "1solomonwakhungu" },
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities",
]
dependencies = [
    "discord.py>=2.3",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/1solomonwakhungu/discord-cli"
Issues = "https://github.com/1solomonwakhungu/discord-cli/issues"

[project.scripts]
discord-cli = "discord_cli.cli:main"

[tool.hatch.version]
path = "src/discord_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_cli"]
