[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discordcli-agents"
dynamic = ["version"]
description = "Command-line tool for managing Discord servers and automating Discord via AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["discord", "cli", "discord-bot", "discord-automation", "ai-agent"]
authors = [{ name = "Solomon Wakhungu", email = "1solomonwakhungu@gmail.com" }]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities",
]
dependencies = [
    "discord.py>=2.3",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "pytest-mock>=3.0", "ruff>=0.4", "mypy>=1.0", "build>=1.0", "python-semantic-release>=8.0", "pre-commit>=3.0"]

[project.urls]
Homepage = "https://github.com/1solomonwakhungu/discord-cli"
Issues = "https://github.com/1solomonwakhungu/discord-cli/issues"
Repository = "https://github.com/1solomonwakhungu/discord-cli"
Changelog = "https://github.com/1solomonwakhungu/discord-cli/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/discordcli-agents/"

[project.scripts]
discord-cli = "discord_cli.cli:main"

[tool.hatch.version]
path = "src/discord_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_cli"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "discord.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/discord_cli"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.semantic_release]
version_variables = ["src/discord_cli/__init__.py:__version__"]
commit_parser = "angular"
changelog_file = "CHANGELOG.md"
build_command = "python -m build"
tag_format = "v{version}"
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
commit_message = "chore(release): {version}\n\nAutomated release via python-semantic-release"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
allowed_types = ["feat", "fix", "docs", "chore", "refactor", "test", "ci", "perf", "style", "build"]
